--- a/backend/resources/application.properties
+++ b/backend/resources/application.properties
@@ -1,4 +1,26 @@
 spring.application.name=Assessment
+
+# ================================
+# PostgreSQL DB connection (Railway)
+# ================================
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# ================================
+# JPA settings
+# ================================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ================================
+# Server port (Railway provides $PORT)
+# ================================
+server.port=${PORT:8080}
+spring.application.name=Assessment
 # PostgreSQL DB connection
 spring.datasource.url=jdbc:postgresql://localhost:5432/doctor_db
 spring.datasource.username=postgres
