Configure DB to use Railway/Fly.io env vars

--- a/backend/resources/application.properties
+++ b/backend/resources/application.properties
@@ -1,3 +1,32 @@
+# PostgreSQL DB connection (use env vars in Fly.io / Railway / Render)
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+# ================================
+# JPA settings
+# ================================
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# ================================
+# Server port (Railway provides $PORT)
+# ================================
+server.port=${PORT:8080}
+spring.application.name=Assessment
+
+# ================================
+# PostgreSQL DB connection (Railway/Fly.io)
+# ================================
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+# PostgreSQL DB connection (use env vars in Fly.io / Railway / Render)
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.application.name=Assessment
 
 # ================================
